sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:7: error: type mismatch;
 found   : Boolean
 required: Int
		if (plusPetit(i,i+1==true)){
                                   ^AlgBubbleSort1:12: error: type mismatch;
 found   : Unit
 required: Boolean
}while (swap=true)
            ^